--- a/Tracko/Pages/ViewJobApps.razor
+++ b/Tracko/Pages/ViewJobApps.razor
@@ -1,7 +1,9 @@
 @page "/ViewJobApps"
+@using Mapster
 @using Shared.Models
 @using Tracko.Services
 @inject DataService Svc
+@inject IJSRuntime JS
 
 <h3 class="mb-3">Job Applications</h3>
 
@@ -14,10 +16,15 @@
 else
 {
     <div class="table-responsive">
-        <table class="table table-hover table-bordered">
+
+        <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#jobAppModal"
+                @onclick="@(ConditionallyResetJobAppForm)">Add Job
+            Application
+        </button>
+
+        <table class="table table-bordered table-striped">
             <thead>
             <tr>
-                <th>Id</th>
                 <th>Role</th>
                 <th>Company</th>
                 <th>Location</th>
@@ -33,19 +40,18 @@ else
             @foreach (var jobApp in _jobApps)
             {
                 <tr>
-                    <th>@jobApp.Id</th>
-                    <td>@jobApp.Role</td>
-                    <td>@jobApp.Company?.Name</td>
-                    <td>@jobApp.Location</td>
-                    <td>@jobApp.Status</td>
-                    <td>@jobApp.ApplicationDate</td>
-                    <td>@jobApp.JobDescription</td>
-                    <td>@jobApp.CoverLetter</td>
-                    <td>@jobApp.Notes</td>
+                    <td title="@jobApp.Role">@jobApp.Role</td>
+                    <td title="@jobApp.Company?.Name">@jobApp.Company?.Name</td>
+                    <td title="@jobApp.Location">@jobApp.Location</td>
+                    <td title="@jobApp.Status">@jobApp.Status</td>
+                    <td title="@jobApp.ApplicationDate?.ToString("dd/MM/yyyy")">@jobApp.ApplicationDate?.ToString("dd/MM/yyyy")</td>
+                    <td title="@jobApp.JobDescription">@jobApp.FormattedJobDescription</td>
+                    <td title="@jobApp.CoverLetter">@jobApp.FormattedCoverLetter</td>
+                    <td title="@jobApp.Notes">@jobApp.FormattedNotes</td>
                     <td>
                         <div class="btn-group" role="group">
                             <button @onclick="@(() => ViewJobApplication(jobApp.Id))" type="button"
-                                    class="btn btn-warning">
+                                    class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#jobAppModal">
                                 Edit
                             </button>
                             <button @onclick="@(() => DeleteJobApplication(jobApp.Id))" type="button"
@@ -58,116 +64,151 @@ else
             }
             </tbody>
         </table>
+
+        <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#jobAppModal"
+                @onclick="@(ConditionallyResetJobAppForm)">Add Job
+            Application
+        </button>
     </div>
 }
 
-<div class="container my-5">
-    <h5>Add a Job Application</h5>
-    <EditForm class="row g-3"
-              Model="NewJobApp"
-              OnValidSubmit="HandleValidJobAppAsync"
-              FormName="JobApplication">
+<div id="jobAppModal" class="modal fade" tabindex="-1" data-bs-backdrop="static">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add a Job Application</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
 
-        <div class="col-12 col-lg-6">
-            <label for="role-field" class="form-label">Role</label>
-            <InputText @bind-Value="NewJobApp.Role" id="role-field" class="form-control" list="roleOptions"/>
-            <datalist id="roleOptions">
-                @foreach (var role in _roles)
-                {
-                    <option value="@role"></option>
-                }
-            </datalist>
+                <div class="container">
+                    <EditForm class="row g-3"
+                              Model="NewJobApp"
+                              OnValidSubmit="HandleValidJobAppAsync"
+                              FormName="JobApplication"
+                              id="@ModalId">
+                        <DataAnnotationsValidator/>
+                        <div class="col-12">
+                            <ValidationSummary/>
+                        </div>
+
+                        <div class="col-12 col-lg-6">
+                            <label for="role-field" class="form-label">Role</label>
+                            <InputText @bind-Value="NewJobApp.Role" id="role-field" class="form-control"
+                                       list="roleOptions"/>
+                            <datalist id="roleOptions">
+                                @foreach (var role in _roles)
+                                {
+                                    <option value="@role"></option>
+                                }
+                            </datalist>
+                        </div>
+
+                        <div class="col-12 col-lg-6">
+                            <label for="company-field" class="form-label">Company</label>
+                            <input disabled type="text" id="company-field" class="form-control" list="companyOptions"/>
+                            <datalist id="companyOptions">
+                            </datalist>
+                        </div>
+
+                        <div class="col-12 col-lg-6">
+                            <label for="applicationDate-field" class="form-label">Application Date</label>
+                            <InputDate @bind-Value="NewJobApp.ApplicationDate"
+                                       id="applicationDate-field"
+                                       class="form-control"></InputDate>
+                        </div>
+
+                        <div class="col-12 col-lg-6">
+                            <label for="location-field" class="form-label">Location</label>
+                            <InputText @bind-Value="NewJobApp.Location" type="text" id="location-field"
+                                       class="form-control"
+                                       list="locationOptions"/>
+                            <datalist id="locationOptions">
+                                @foreach (var location in _locations)
+                                {
+                                    <option value="@location"></option>
+                                }
+                            </datalist>
+                        </div>
+
+                        <div class="col-12 col-lg-6">
+                            <label for="status-field" class="form-label">Status</label>
+                            <input disabled type="text" id="status-field" class="form-control" list="statusOptions">
+                            <datalist id="statusOptions">
+                                <option value="Applied"></option>
+                            </datalist>
+                        </div>
+
+                        <div class="col-12 col-lg-12">
+                            <label for="job-description-field" class="form-label">Job Description</label>
+                            <InputTextArea @bind-Value="NewJobApp.JobDescription"
+                                           id="job-description-field" class="form-control" rows="3"></InputTextArea>
+                        </div>
+
+                        <div class="col-12 col-lg-12">
+                            <label for="cover-letter-field" class="form-label">Cover Letter</label>
+                            <InputTextArea @bind-Value="NewJobApp.CoverLetter"
+                                           id="cover-letter-field" class="form-control"
+                                           rows="3"></InputTextArea>
+                        </div>
+
+                        <div class="col-12 col-lg-12">
+                            <label for="notes-field" class="form-label">Notes</label>
+                            <InputTextArea @bind-Value="NewJobApp.Notes"
+                                           id="notes-field" class="form-control"
+                                           rows="3"></InputTextArea>
+                        </div>
+
+                        @* <div class="col-12 d-flex"> *@
+                        <button class="btn btn-primary" for="@ModalId">Save changes</button>
+                        @* </div> *@
+                    </EditForm>
+                </div>
+
+            </div>
         </div>
-
-        <div class="col-12 col-lg-6">
-            <label for="company-field" class="form-label">Company</label>
-            <input disabled type="text" id="company-field" class="form-control" list="companyOptions"/>
-            <datalist id="companyOptions">
-            </datalist>
-        </div>
-
-        <div class="col-12 col-lg-6">
-            <label for="applicationDate-field" class="form-label">Application Date</label>
-            <InputDate @bind-Value="NewJobApp.ApplicationDate" id="applicationDate-field"
-                       class="form-control"></InputDate>
-        </div>
-
-        <div class="col-12 col-lg-6">
-            <label for="location-field" class="form-label">Location</label>
-            <InputText @bind-Value="NewJobApp.Location" type="text" id="location-field" class="form-control"
-                       list="locationOptions"/>
-            <datalist id="locationOptions">
-                @foreach (var location in _locations)
-                {
-                    <option value="@location"></option>
-                }
-            </datalist>
-        </div>
-
-        <div class="col-12 col-lg-6">
-            <label for="status-field" class="form-label">Status</label>
-            <input disabled type="text" id="status-field" class="form-control" list="statusOptions">
-            <datalist id="statusOptions">
-                <option value="Applied"></option>
-            </datalist>
-        </div>
-
-        <div class="col-12 col-lg-12">
-            <label for="job-description-field" class="form-label">Job Description</label>
-            <InputTextArea @bind-Value="NewJobApp.JobDescription"
-                           id="job-description-field" class="form-control" rows="3"></InputTextArea>
-        </div>
-
-        <div class="col-12 col-lg-12">
-            <label for="cover-letter-field" class="form-label">Cover Letter</label>
-            <InputTextArea @bind-Value="NewJobApp.CoverLetter"
-                           id="cover-letter-field" class="form-control"
-                           rows="3"></InputTextArea>
-        </div>
-
-        <div class="col-12 col-lg-12">
-            <label for="notes-field" class="form-label">Notes</label>
-            <InputTextArea @bind-Value="NewJobApp.Notes"
-                           id="notes-field" class="form-control"
-                           rows="3"></InputTextArea>
-        </div>
-
-        <div class="offset-10 col-4">
-            <button for="JobApplication" class="btn btn-primary">Submit</button>
-        </div>
-
-    </EditForm>
+    </div>
 </div>
 
 @code {
+    private const string ModalId = "jobAppModal";
 
     public JobApplicationRequestDto NewJobApp { get; set; } = new();
 
-    private List<JobApplicationWithCompanyDto>? _jobApps;
+    private readonly List<JobApplicationViewDto>? _jobApps = [];
     private readonly List<string> _roles = [];
     private readonly List<string?> _locations = [];
-    private DateOnly CurrentDate => DateOnly.FromDateTime(DateTime.Today);
+    private static DateOnly CurrentDate => DateOnly.FromDateTime(DateTime.Today);
 
     protected override async Task OnInitializedAsync()
     {
         if (NewJobApp.ApplicationDate is null)
-            NewJobApp.ApplicationDate = CurrentDate;
+            NewJobApp = new JobApplicationRequestDto
+            {
+                ApplicationDate = CurrentDate
+            };
 
         await GetJobApplicationsAsync();
     }
 
     async Task HandleValidJobAppAsync()
     {
+        HttpResponseMessage res;
         if (NewJobApp.Id is null)
-            await Svc.CreateJobApplicationAsync(NewJobApp);
+            res = await Svc.CreateJobApplicationAsync(NewJobApp);
         else
-            await Svc.UpdateJobApplicationAsync(NewJobApp);
+            res = await Svc.UpdateJobApplicationAsync(NewJobApp);
 
+        if (!res.IsSuccessStatusCode)
+            return;
+
+        // reset job app object
         NewJobApp = new JobApplicationRequestDto
         {
             ApplicationDate = CurrentDate
         };
 
+        await HideFormModal();
         await GetJobApplicationsAsync();
     }
 
@@ -178,14 +219,23 @@ else
 
     private async Task DeleteJobApplication(int jobAppId)
     {
-        await Svc.DeleteJobApplicationAsync(jobAppId);
-        await GetJobApplicationsAsync();
-        RefreshDataLists();
+        var res = await Svc.DeleteJobApplicationAsync(jobAppId);
+        if (res.IsSuccessStatusCode)
+        {
+            await GetJobApplicationsAsync();
+            RefreshDataLists();
+        }
     }
 
     async Task GetJobApplicationsAsync()
     {
-        _jobApps = await Svc.GetJobApplicationsAsync();
+        var jobAppsToFormat = await Svc.GetJobApplicationsAsync();
+        if (jobAppsToFormat is not null)
+            foreach (var j in jobAppsToFormat)
+            {
+                _jobApps?.Add(j.Adapt<JobApplicationWithCompanyDto, JobApplicationViewDto>());
+            }
+
         RefreshDataLists();
     }
 
@@ -207,6 +257,20 @@ else
 
         _roles.Sort();
         _locations.Sort();
+    }
+
+    void ConditionallyResetJobAppForm()
+    {
+        if (NewJobApp.Id is not null)
+            NewJobApp = new JobApplicationRequestDto
+            {
+                ApplicationDate = CurrentDate
+            };
+    }
+
+    private async Task HideFormModal()
+    {
+        await JS.InvokeVoidAsync("hideBootstrapModal", ModalId);
     }
 
 }
